[components] Fix very broken StyleSelect

--- a/packages/@sanity/components/src/selects/styles/StyleSelect.css
+++ b/packages/@sanity/components/src/selects/styles/StyleSelect.css
@@ -51,17 +51,6 @@
   display: none;
 }
 
-.noResultText {
-  text-align: center;
-  padding: 0.5em;
-}
-
-.spinner {
-  position: absolute;
-  top: 0.5em;
-  right: 0.75em;
-}
-
 .item {
   display: block;
   position: relative;
@@ -83,6 +72,10 @@
   &:active {
     background-color: var(--gray-light--transparent);
   }
+
+  @nest &.itemSelected {
+    background-color: var(--selectable-item-color-hover);
+  }
 }
 
 .itemContent {
@@ -90,7 +83,7 @@
   padding: 0.5em 0;
 }
 
-.itemSelected {
+.itemActive {
   composes: item;
   background-color: var(--selected-item-color);
   color: var(--selected-item-color--inverted);
@@ -110,4 +103,9 @@
   font-size: 1em;
   width: 2em;
   overflow: hidden;
+}
+
+.focused {
+  border: 1px solid var(--input-border-color-focus);
+  box-shadow: 0 0 8px color(var(--input-border-color-focus) a(35%));
 }
